# my-hw-oj

./: CMakeLists.txt  readme.md
oj100/: 56构成正方形的数量.cpp  58运维日志排序.cpp  59磁盘容量排序.cpp  61计算堆栈中的剩余数字.cpp  64报数游戏.cpp  65高矮个子排队.cpp  66新工号中数字的最短长度.cpp  67消消乐游戏.cpp  74分班问题.cpp  76最左冗余覆盖子串.cpp  87英文输入法.cpp  91找最小数.cpp  92_2.cpp  92免单统计.cpp  92免单统计2.cpp  97预定酒店.cpp
oj150/: 102简单的压缩算法.cpp  106计算网络信号强度.cpp  109机房布局.cpp  113九宫格按键输入2.cpp  113九宫格案件输入.cpp  115最大利润.cpp  116货币单位换算.cpp  119满足条件的最长子串长11.cpp  120猜数字.cpp  128判断一组不等式是否满足约束并输出最大差.cpp  130最多获得的短信条数.cpp  136最大报酬.cpp  143羊狼农夫过河.cpp  149区间交叠问题.cpp
oj200/: 161机器人可活动的最大网格点数目.cpp  162过滤组合字符串.cpp  163日志首次上报最多积分日志采集系统.cpp  164字符串重新排序.cpp  165字符串重新排序2.cpp  166单向链表中间节点.cpp  172优秀学员统计.cpp  174猜字谜.cpp  176查找充电设备组合.cpp
oj250/: 201实力差距最小总和最佳对手.cpp  211最优资源分配芯片资源占用.cpp  212找数字找等值元素.cpp  215斗地主之顺子.cpp  216打印任务排序.cpp  219矩阵相交的面积.cpp  222ipv4地址转换.cpp  224欢乐的周末.cpp  225最少交换次数.cpp  228_2最大社交距离.cpp  228最大社交距离.cpp  231vlan资源池.cpp  233字符串分割.cpp  235敏感字段加密.cpp  236分苹果.cpp  237一种字符串压缩表示的解压.cpp  239计算疫情扩散时间.cpp  246报文解压缩.cpp
oj300/: 253响应报文时间.cpp  266任务最优调度.cpp  268演唱会计算最多能观看机场演出.cpp  273内存资源分配.cpp  277导师请吃火锅.cpp  278关联子串.cpp  280数大雁.cpp  281热点网站统计.cpp  283单词接龙.cpp  284学生方阵.cpp  291整数编码.cpp  293宜居星球改造计划.cpp  296补活未成活胡杨.cpp  299选修课.cpp  300出租车计费靠谱的车.cpp
oj350/: 304最长的交替连续方波信号.cpp  308数组二叉树.cpp  310分隔数组的最大差值.cpp  311MELON的难题.cpp  319战场索敌.cpp  320最佳植树距离.cpp  328回复数字序列.cpp  332寻找最大价值的矿堆.cpp  341荒岛求生.cpp  344计算最近的数.cpp  345数字序列比大小.cpp  346金字塔.cpp
oj400/: 362转骰子.cpp  371增强的strstr.cpp  374字符串化繁为简.cpp  376通过软盘拷贝文件.cpp  392树状结构查询.cpp  397最长子字符串的长度.cpp  398转盘寿司.cpp
oj450/: 405游戏分组.cpp  409传递悄悄话.cpp  412学生排名智能成绩表.cpp  423计算三叉树的高度.cpp  424虚拟游戏理财.cpp  428连续字母长度.cpp  431跳马问题.cpp  451手机app防沉迷系统.cpp
oj50/: 01滑动窗口最大值.cpp  02在字符串中找到连续最长的数字串.cpp  03路灯照明问题.cpp  04字符统计并重排.cpp  05TLV解析.cpp  06数组去重和排序.cpp  07字符串筛选排序.cpp  08停车场车辆统计.cpp  09绘图机器.cpp  10最大时间.cpp  11第k个排列.cpp  12拼接url.cpp  13非严格递增连续数字序列.cpp  14_2数字涂色_并查集.cpp  14数字涂色.cpp  15数组拼接.cpp  16整数对最小和.cpp  17相对开音节.cpp  18喊7的次数重排.cpp  19勾股数元组.cpp  20_火星文计算.cpp  20火星文计算2.cpp  21最远足迹.cpp  22字符串序列判定.cpp  23按身高体重排序.cpp  24找车位.cpp  25考勤信息.cpp  26快递运输.cpp  27计算最大乘积.cpp  28全排列.cpp  29组成最大数.cpp  30检查是否存在满足条件的数字组合.cpp  31素数之积.cpp  32字符串变换最小字符串.cpp  33找出经过特定点的路径长度.cpp  34ABR车路协同场景.cpp  35解密犯罪时间.cpp  36水仙花数.cpp  37字符串排序.cpp  38全量已占用字符集.cpp  (+13 more)
oj500/: 453跳格子小明跳格子.cpp  454生成哈夫曼树.cpp  455螺旋数字矩阵.cpp  456分披萨.cpp  460模拟目录管理功能.cpp  468可以处理的最大任务数.cpp  474推荐多样性.cpp  476矩阵匹配数组中第k大的数中的最小值.cpp  482加密算法特殊的加密算法.cpp  483中文分词模拟器.cpp  487流浪地球.cpp
oj550/: 526数字游戏.cpp  528最长子字符串长度.cpp  548最大数.cpp
suanfa_1000/: 01skiplist.cpp  02skiplist.cpp  03字符串截取.cpp  04项目分析duckdb.cpp  05aries恢复.cpp  sql.sql
suanfa_1000/duckdb/: config.cfg  life.sh  log.cpp  parseConfig.cpp
suanfa_1000/duckdb/logs/: log_2025_02_10.txt  log_Mon_Feb_10_16_16_21_2025.txt  log_Mon_Feb_10_16_36_53_2025.txt
