cmake_minimum_required(VERSION 3.16)
project(oj)

set(CMAKE_CXX_STANDARD 14)

add_executable(oj main.cpp)

add_executable(oj01 oj50/01滑动窗口最大值.cpp)
add_executable(oj02 oj50/02在字符串中找到连续最长的数字串.cpp)
add_executable(oj03 oj50/03路灯照明问题.cpp)
add_executable(oj04 oj50/04字符统计并重排.cpp)
add_executable(oj05 oj50/05TLV解析.cpp)
add_executable(oj06 oj50/06数组去重和排序.cpp)
add_executable(oj07 oj50/07字符串筛选排序.cpp)
add_executable(oj08 oj50/08停车场车辆统计.cpp)
add_executable(oj09 oj50/09绘图机器.cpp)
add_executable(oj10 oj50/10最大时间.cpp)
add_executable(oj11 oj50/11第k个排列.cpp)
add_executable(oj12 oj50/12拼接url.cpp)
add_executable(oj13 oj50/13非严格递增连续数字序列.cpp)
add_executable(oj14 oj50/14数字涂色.cpp)
add_executable(oj14_2 oj50/14_2数字涂色_并查集.cpp)
add_executable(oj15 oj50/15数组拼接.cpp)
add_executable(oj16 oj50/16整数对最小和.cpp)
add_executable(oj17 oj50/17相对开音节.cpp)
add_executable(oj18 oj50/18喊7的次数重排.cpp)
add_executable(oj19 oj50/19勾股数元组.cpp)
add_executable(oj20 oj50/20_火星文计算.cpp)
add_executable(oj20_2 oj50/20火星文计算2.cpp)
add_executable(oj21 oj50/21最远足迹.cpp)
add_executable(oj22 oj50/22字符串序列判定.cpp)
add_executable(oj23 oj50/23按身高体重排序.cpp)
add_executable(oj24 oj50/24找车位.cpp)
add_executable(oj25 oj50/25考勤信息.cpp)
add_executable(oj26 oj50/26快递运输.cpp)
add_executable(oj27 oj50/27计算最大乘积.cpp)
add_executable(oj28 oj50/28全排列.cpp)
add_executable(oj29 oj50/29组成最大数.cpp)
add_executable(oj30 oj50/30检查是否存在满足条件的数字组合.cpp)
add_executable(oj31 oj50/31素数之积.cpp)
add_executable(oj32 oj50/32字符串变换最小字符串.cpp)
add_executable(oj33 oj50/33找出经过特定点的路径长度.cpp)
add_executable(oj34 oj50/34ABR车路协同场景.cpp)
add_executable(oj35 oj50/35解密犯罪时间.cpp)
add_executable(oj36 oj50/36水仙花数.cpp)
add_executable(oj37 oj50/37字符串排序.cpp)
add_executable(oj38 oj50/38全量已占用字符集.cpp)
add_executable(oj39 oj50/39秘钥格式化.cpp)
add_executable(oj40 oj50/40数字字符串组合倒序.cpp)
add_executable(oj41 oj50/41查找接口成功率最优时间段.cpp)
add_executable(oj42 oj50/42GPU算力问题.cpp)
add_executable(oj43 oj50/43找终点.cpp)
add_executable(oj44 oj50/44最大花费金额.cpp)
add_executable(oj45 oj50/45分糖果.cpp)
add_executable(oj46 oj50/46猴子爬山.cpp)
add_executable(oj47 oj50/47WeiAreATeam.cpp)
add_executable(oj48 oj50/48寻找身高相近的小朋友.cpp)
add_executable(oj49 oj50/49数组组成最小数字.cpp)
add_executable(oj49_2 oj50/49_2.cpp)
add_executable(oj50 oj50/50最长密码.cpp)

add_executable(oj56 oj100/56构成正方形的数量.cpp)
add_executable(oj58 oj100/58运维日志排序.cpp)
add_executable(oj59 oj100/59磁盘容量排序.cpp)
add_executable(oj64 oj100/64报数游戏.cpp)
add_executable(oj65 oj100/65高矮个子排队.cpp)
add_executable(oj66 oj100/66新工号中数字的最短长度.cpp)